--- a/team/team.html
+++ b/team/team.html
@@ -106,7 +106,21 @@
         </div>
     </section>
     <section class="white-space"></section>
-
+       
+    <!-- arrow Whatsapp icon -->
+    <div class="right-fixed">
+        <div class="Whatsapp">
+         <a href="http://wa.me/918921988343" target="_blank">
+            <i class="fa-brands fa-whatsapp"></i>
+         </a>
+        </div>
+       <div class="top-arrow">
+        <button class="top-arrow-btn">
+            <i class="fa-solid fa-arrow-up"></i>
+        </button>
+       </div>
+      </div>
+      
      <!-- foooter -->
      <footer class="footer">
         <div class="sub-footer">
