--- a/activity/activity.html
+++ b/activity/activity.html
@@ -191,7 +191,20 @@
             <img src="/assets/images/pro-trainner.jpg" alt="img">
           </div>
        </section>
-
+      
+       <!-- arrow Whatsapp icon -->
+      <div class="right-fixed">
+        <div class="Whatsapp">
+         <a href="http://wa.me/918921988343" target="_blank">
+            <i class="fa-brands fa-whatsapp"></i>
+         </a>
+        </div>
+       <div class="top-arrow">
+        <button class="top-arrow-btn">
+            <i class="fa-solid fa-arrow-up"></i>
+        </button>
+       </div>
+      </div>
 
        <!---footer-->
     <footer class="footer">
