--- a/about/about.html
+++ b/about/about.html
@@ -18,21 +18,13 @@
      <!---Header-->
      <header class="header-contianer">
         <div class="sud-header conatiner">
-            <a href="/">
-                <div class="header-logo">
-                    <img src="/assets/images/play.png" alt="">
-                    <h2>Play-Smart</h2>
-                </div>
+            <a href="/" class="header-link">
+                 <!-- data coming form index.js file -->
             </a>
             <div class="header-nav-bar">
                 <nav>
-                    <ul >
-                        <li> <a class="nav-link" href="/">Home</a></li>
-                        <li> <a class="nav-link" href="/activity/activity.html">Activity</a></li>
-                        <li> <a class="nav-link" href="/gallery/gallery.html">Gallery</a></li>
-                        <li> <a class="nav-link" href="/team/team.html">Team</a></li>
-                        <li> <a class="nav-link" href="/about/about.html">About</a></li>
-                        <li> <a class="nav-link" href="/contact/contact.html">Contact</a></li>
+                    <ul class="navLink-container">
+                        <!-- data coming form index.js file -->
                     </ul>
                 </nav>
                 <!-- moble-menu-btn -->
@@ -47,13 +39,8 @@
         <!-- moble-menu -->
         <div class="moble-menu-container open-in-moble">
             <nav>
-                <ul >
-                    <li> <a class="nav-link" href="/">Home</a></li>
-                    <li> <a class="nav-link" href="/activity/activity.html">Activity</a></li>
-                    <li> <a class="nav-link" href="/gallery/gallery.html">Gallery</a></li>
-                    <li> <a class="nav-link" href="/team/team.html">Team</a></li>
-                    <li> <a class="nav-link" href="/about/about.html">About</a></li>
-                    <li> <a class="nav-link" href="/contact/contact.html">Contact</a></li>
+                <ul class="navLink-container">
+                    <!-- data coming form index.js file -->
                 </ul>
 
             </nav>
@@ -94,7 +81,7 @@
             </div>
             <div class="about-contact">
                 <h1>About Us</h1>
-                <p>Smart Play Academy is a
+                <p>PLAYSMART Academy is a
                     renowned institution oering top-
                     notch training in various sports,
                     including Roller Skating, Boxing,
@@ -124,7 +111,7 @@
                     <div class="yellow"></div>
                 </div>
                 <div class="sports-text">
-                    <h2>Founder Of Play-Smart</h2>
+                    <h2>Founder Of PLAYSMART</h2>
                 </div>
     
     
@@ -166,7 +153,7 @@
 
             <div class="abou-us footer-contant">
                 <h2>About Us</h2>
-                <p>Smart Play Academy is a
+                <p>PLAYSMART Academy is a
                     renowned institution oering top-
                     notch training in various sports,
                     including Roller Skating, Boxing,
@@ -181,13 +168,8 @@
 
             <div class="footer-contant navigation">
                 <h2>Navigation</h2>
-                <ul>
-                    <li> <a href="/">Home</a></li>
-                    <li> <a href="/activity/activity.html">Activity</a></li>
-                    <li> <a href="/gallery/gallery.html">Gallery</a></li>
-                    <li> <a href="/team/team.html">Team</a></li>
-                    <li> <a href="/about/about.html">About</a></li>
-                    <li> <a href="/contact/contact.html">Contact</a></li>
+                <ul class="navLink-container">
+                    <!-- data coming form index.js file -->
                 </ul>
             </div>
 
