--- a/index.html
+++ b/index.html
@@ -17,22 +17,14 @@
     <!---Header-->
     <header class="header-contianer">
         <div class="sud-header conatiner">
-            <a href="/">
-                <div class="header-logo">
-                    <img src="/assets/images/play.png" alt="">
-                    <h2>Play-Smart</h2>
-                </div>
-            </a>
+            <a href="/" class="header-link">
+                <!-- data coming form index.js file -->
+             </a>
            
             <div class="header-nav-bar">
                 <nav>
-                    <ul>
-                        <li> <a class="nav-link" href="/">Home</a></li>
-                        <li> <a class="nav-link" href="/activity/activity.html">Activity</a></li>
-                        <li> <a class="nav-link" href="/gallery/gallery.html">Gallery</a></li>
-                        <li> <a class="nav-link" href="/team/team.html">Team</a></li>
-                        <li> <a class="nav-link" href="/about/about.html">About</a></li>
-                        <li> <a class="nav-link" href="/contact/contact.html">Contact</a></li>
+                    <ul class="navLink-container">
+                        <!-- data coming form index.js file -->
                     </ul>
 
                 </nav>
@@ -47,13 +39,8 @@
         <!-- moble-menu -->
         <div class="moble-menu-container open-in-moble ">
             <nav>
-                <ul >
-                    <li> <a class="nav-link" href="/">Home</a></li>
-                    <li> <a class="nav-link" href="/activity/activity.html">Activity</a></li>
-                    <li> <a class="nav-link" href="/gallery/gallery.html">Gallery</a></li>
-                    <li> <a class="nav-link" href="/team/team.html">Team</a></li>
-                    <li> <a class="nav-link" href="/about/about.html">About</a></li>
-                    <li> <a class="nav-link" href="/contact/contact.html">Contact</a></li>
+                <ul class="navLink-container" >
+                    <!-- data coming form index.js file -->
                 </ul>
 
             </nav>
@@ -70,7 +57,7 @@
     <section class="hero-sesstion">
 
         <div class="hero-contect">
-            <h1>Team Play-Smart</h1>
+            <h1>Team PLAYSMART</h1>
             <p>Smart Play Academy is committed to fostering
                 growth, discipline, and fun through our expertly
                 crafted training programs</p>
@@ -90,7 +77,7 @@
     <!-- why choose us -->
      <section class="why-choose-us">
         <div class="sub-why-choose-us conatiner">
-            <h1>Why Choose Smart Play Academy?</h1>
+            <h1>Why Choose PLAYSMART Academy?</h1>
             <div class="why-choose-items">
                 <div class="text">
                     <h2>Professional Coaching</h2>
@@ -141,14 +128,14 @@
             <div class="why-choose-items">
                 <div class="text">
                     <h2>Conclusion</h2>
-                    <p>Smart Play Academy is committed to fostering
+                    <p>PLAYSMART Academy is committed to fostering
                         growth, discipline, and fun through our expertly
                         crafted training programs. We are excited to
                         offer an inclusive, professional, and rewarding
                         experience for all students. Join us, and let’s
                         make this 40-day journey a memorable one!
                         For more information or to enroll, please
-                        contact Smart Play Academy.</p>
+                        contact PLAYSMART Academy.</p>
                 </div>
                 <div class="image">
                     <img src="/assets/images/Conclusion.jpg" alt="img">
@@ -267,7 +254,7 @@
 
             <div class="abou-us footer-contant">
                 <h2>About Us</h2>
-                <p>Smart Play Academy is a
+                <p>PLAYSMART Academy is a
                     renowned institution oering top-
                     notch training in various sports,
                     including Roller Skating, Boxing,
@@ -282,13 +269,8 @@
 
             <div class="footer-contant navigation">
                 <h2>Navigation</h2>
-                <ul>
-                    <li> <a href="/">Home</a></li>
-                    <li> <a href="/activity/activity.html">Activity</a></li>
-                    <li> <a href="/gallery/gallery.html">Gallery</a></li>
-                    <li> <a href="/team/team.html">Team</a></li>
-                    <li> <a href="/about/about.html">About</a></li>
-                    <li> <a href="/contact/contact.html">Contact</a></li>
+                <ul class="navLink-container">
+                    <!-- data coming form index.js file -->
                 </ul>
             </div>
 
