--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <!-- moble-menu -->
         <div class="moble-menu-container open-in-moble ">
             <nav>
-                <ul class="navLink-container" >
+                <ul class="navLink-container moble-screen-menu">
                     <!-- data coming form index.js file -->
                 </ul>
 
