--- a/index.html
+++ b/index.html
@@ -56,21 +56,18 @@
     <!---hero-->
     <section class="hero-sesstion">
 
-        <div class="hero-contect">
+        <!-- <div class="hero-contect">
             <h1>Team PLAYSMART</h1>
             <p>Smart Play Academy is committed to fostering
                 growth, discipline, and fun through our expertly
                 crafted training programs</p>
-            <!-- <div class="learn-hero">
-                <i class="fa-solid fa-plus"></i>
-                <span>LEARN MORE</span>
-            </div> -->
+            
            
         </div>
         <div class="color-blue-yellow">
             <div class="blue"></div>
             <div class="yellow"></div>
-        </div>
+        </div> -->
 
     </section>
 
